--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -3,7 +3,15 @@
 {% block content %}
     <div class="container">
     {% load i18n %}
+
+    {% if not create_trip %}
+    <a class="btn btn-default btn-lg" href="/planner/list_venues/"> {% trans "Plan a trip" %}</a>
+    {% endif %}
+
+    {% if create_trip %}
     <a class="btn btn-default btn-lg" href="/trip/create/"> {% trans "Create Trip" %}</a>
+    {% endif %}
+
     {% if not trips %}<p>{% trans "We couldn't find anything..." %}</p>{% endif %}
     {% for trip in trips %}
         <div class="well animated fadeInUp">
@@ -12,7 +20,7 @@
                     <img class="img-rounded" src="/{{trip.traveller.photo}}">
                 </a>
                 <div class="media-body">
-                    <h3 class="media-heading">{{trip.name}} ({{ trip.get_state_display }})</h3>
+                    <h3 class="media-heading">{{trip.name}} {% if create_trip %}({{ trip.get_state_display }}) {% endif %}</h3>
                     <p class="text-right">By {{trip.traveller}}</p>
                     <p>{{trip.publishedDescription|safe|slice:":250" }}</p>
                     <ul class="list-inline list-unstyled">
