Bug "popular" Se ha eliminado la etiqueta popular del "Silver"

--- a/principal/templates/buy_coins.html
+++ b/principal/templates/buy_coins.html
@@ -15,7 +15,8 @@
         </div>
         <div style="z-index:55;" class="plan col-sm-4 col-lg-4">
           <div class="plan-name-silver">
-            <h2>Silver <span class="badge badge-warning">Popular</span></h2>
+              <h2>Silver</h2>
+{#            <h2>Silver <span class="badge badge-warning">Popular</span></h2>#}
 {#            <span><strike>$10.99</strike>   <font color="red">$9.99 - <span class="label label-warning">Sale</span></font></span>#}
               <span>7.00&euro;</span>
           </div>
