--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -32,7 +32,7 @@
     <!-- Custom Javascript -->
     <script src="{% static "js/home/morphext.min.js" %}"></script>
 
-    <!--{% block extrahead %} {% endblock %} -->
+    {% block extrahead %} {% endblock %}
 </head>
 <body>
     <!-- Navigation -->
