Rediseño del perfil Se ha rediseñado el perfil del viajero

--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{% static "css/timeline.css" %}">
     <link rel="stylesheet" href="{% static "css/sign-in.css" %}">
     <link rel="stylesheet" href="{% static "css/pricing-table.css" %}">
+    <link rel="stylesheet" href="{% static "css/profile.css" %}">
     <!-- Jquery -->
     <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
     <!-- Boostrap -->
