Bug en el HTML comprar monedas virtuales Se ha añadido un titulo y una descripcion

--- a/principal/templates/buy_coins.html
+++ b/principal/templates/buy_coins.html
@@ -2,6 +2,8 @@
 {% block title %} Buy coins {% endblock %}
 {% block content %}
 <div class="container">
+    <h1>Paquetes de monedas</h1>
+    <p>Con nuestras monedas virtuales podras organizar tus viajes. Aprovecha nuestros packs y ahorra tiempo y dinero!</p>
     <div class="pricing-table pricing-three-column row">
         <div class="plan col-sm-4 col-lg-4">
           <div class="plan-name-bronze">
