--- a/principal/templates/buy_coins.html
+++ b/principal/templates/buy_coins.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h1>Paquetes de monedas</h1>
-    <p>Con nuestras monedas virtuales podras organizar tus viajes. Aprovecha nuestros packs y ahorra tiempo y dinero!</p>
+    <p>Con nuestras monedas virtuales podras organizar tus viajes. Aprovecha nuestros packs!</p>
     <div class="pricing-table pricing-three-column row">
         <div class="plan col-sm-4 col-lg-4">
           <div class="plan-name-bronze">
