Dar tips a Venues a la mitad de implementado.

--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -120,7 +120,7 @@
 	
 	$('#traveller-registration').on('submit', function(event){
 	    event.preventDefault();
-		$('#singUp-button').hide()
+		$('#singUp-button').hide();
 	    register_traveller();
 	});
 	
