--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -57,7 +57,7 @@
                         {% for venue in day.venues.all %} {% if not venue.is_food%}
                         <div class="col-sm-4 col-xs-6 col-md-4 col-lg-3 clearfix">
                             <img src="{{venue.photo}}"
-                                class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
+                                class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'" data-toggle="modal" data-target="#tipInfo" onclick=show_modal_tips({{venue.id}})>
                             <h4>{{venue.name}}</h4>
                         </div>
                         {% if forloop.counter|divisibleby:2 %}
@@ -75,7 +75,7 @@
                         {% for venue in day.venues.all %} {% if venue.is_food%}
                         <div class="col-sm-4 col-xs-6 col-md-4 col-lg-3 clearfix">
                             <img src="{{venue.photo}}"
-                                class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
+                                class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'" data-toggle="modal" data-target="#tipInfo" onclick=show_modal_tips({{venue.id}})>
                             <h4>{{venue.name}}</h4>
                         </div>
                         {% if forloop.counter|divisibleby:2 %}
@@ -128,5 +128,23 @@
         });
     }
     google.maps.event.addDomListener(window, 'load', initialize);
+/*
+    function show_modal_tips(id_venue) {
+		$.ajax({
+	        url : "/venue_tips/"+id_venue, // the endpoint
+	        type : "GET", // http method
+			dataType : "JSON",
+	        // handle a successful response
+	        success : function(json) {
+                $("#tip_placement").text(json);
+			},
+
+	        // handle a non-successful response
+	        error : function(xhr,errmsg,err) {
+                alert("error");
+	        }
+	    });
+	};
+	*/
     </script>
 {% endblock %}
