--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -57,7 +57,7 @@
                         {% for venue in day.venues.all %} {% if not venue.is_food%}
                         <div class="col-sm-4 col-xs-6 col-md-4 col-lg-3 clearfix">
                             <img src="{{venue.photo}}"
-                                class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'" data-toggle="modal" data-target="#tipInfo" onclick=show_modal_tips({{venue.id}})>
+                                class="img-responsive img-circle img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'" data-toggle="modal" data-target="#tipInfo" onclick=show_modal_tips({{venue.id}})>
                             <h4>{{venue.name}}</h4>
                         </div>
                         {% if forloop.counter|divisibleby:2 %}
