--- a/static/css/pricing-table.css
+++ b/static/css/pricing-table.css
@@ -1,105 +1,116 @@
-.pricing-table .plan {
+/*=============================================================
+    Authour URL: www.designbootstrap.com
+
+    http://www.designbootstrap.com/
+
+    License: MIT
+========================================================  */
+
+/*============================================================
+BACKGROUND COLORS
+============================================================*/
+.db-bk-color-one {
+    background-color: #f55039;
+}
+
+.db-bk-color-two {
+    background-color: #46A6F7;
+}
+
+.db-bk-color-three {
+    background-color: #47887E;
+}
+/*============================================================
+PRICING STYLES
+==========================================================*/
+.db-padding-btm {
+    margin-top: 25px;
+    padding-bottom: 25px;
+}
+.db-button-color-square {
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.50);
+    border: none;
+    border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+}
+
+    .db-button-color-square:hover {
+        color: #fff;
+        background-color: rgba(0, 0, 0, 0.50);
+        border: none;
+    }
+
+
+.db-pricing-eleven {
+    margin-bottom: 30px;
     margin-top: 50px;
-    margin-left:0px;
-    border-radius: 5px;
     text-align: center;
-    background-color: #f3f3f3;
-    -moz-box-shadow: 0 0 6px 2px #b0b2ab;
-    -webkit-box-shadow: 0 0 6px 2px #b0b2ab;
-    box-shadow: 0 0 6px 2px #b0b2ab;
-    color: #000000;
-}
- 
- .plan:hover {
-    background-color: #fff;
-    -moz-box-shadow: 0 0 12px 3px #b0b2ab;
-    -webkit-box-shadow: 0 0 12px 3px #b0b2ab;
-    box-shadow: 0 0 12px 3px #b0b2ab;
-}
- 
- .plan {
-    padding: 20px;
-    margin-left:0px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, .5);
     color: #fff;
-    background-color: #5e5f59;
-    -moz-border-radius: 5px 5px 0 0;
-    -webkit-border-radius: 5px 5px 0 0;
-    border-radius: 5px 5px 0 0;
+    line-height: 30px;
 }
-  
-.plan-name-bronze {
-    padding: 20px;
-    color: #fff;
-    background-color: #665D1E;
-    -moz-border-radius: 5px 5px 0 0;
-    -webkit-border-radius: 5px 5px 0 0;
-    border-radius: 5px 5px 0 0;
- }
-  
-.plan-name-silver {
-    padding: 20px;
-    color: #fff;
-    background-color: #C0C0C0;
-    -moz-border-radius: 5px 5px 0 0;
-    -webkit-border-radius: 5px 5px 0 0;
-    border-radius: 5px 5px 0 0;
- }
-  
-.plan-name-gold {
-    padding: 20px;
-    color: #fff;
-    background-color: #FFD700;
-    -moz-border-radius: 5px 5px 0 0;
-    -webkit-border-radius: 5px 5px 0 0;
-    border-radius: 5px 5px 0 0;
-  } 
-  
-.pricing-table-bronze  {
-    padding: 20px;
-    color: #fff;
-    background-color: #f89406;
-    -moz-border-radius: 5px 5px 0 0;
-    -webkit-border-radius: 5px 5px 0 0;
-    border-radius: 5px 5px 0 0;
+
+    .db-pricing-eleven ul {
+        list-style: none;
+        margin: 0;
+        text-align: center;
+        padding-left: 0px;
+    }
+
+        .db-pricing-eleven ul li {
+            padding-top: 20px;
+            padding-bottom: 20px;
+            cursor: pointer;
+        }
+
+            .db-pricing-eleven ul li i {
+                margin-right: 5px;
+            }
+
+
+    .db-pricing-eleven .price {
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 40px 20px 20px 20px;
+        font-size: 60px;
+        font-weight: 900;
+        color: #FFFFFF;
+    }
+
+        .db-pricing-eleven .price small {
+            color: #B8B8B8;
+            display: block;
+            font-size: 12px;
+            margin-top: 22px;
+        }
+
+    .db-pricing-eleven .type {
+        background-color: #52E89E;
+        padding: 50px 20px;
+        font-weight: 900;
+        text-transform: uppercase;
+        font-size: 30px;
+    }
+
+    .db-pricing-eleven .pricing-footer {
+        padding: 20px;
+    }
+
+.db-attached > .col-lg-4,
+.db-attached > .col-lg-3,
+.db-attached > .col-md-4,
+.db-attached > .col-md-3,
+.db-attached > .col-sm-4,
+.db-attached > .col-sm-3 {
+    padding-left: 0;
+    padding-right: 0;
 }
-  
-.pricing-table .plan .plan-name span {
-    font-size: 20px;
+
+.db-pricing-eleven.popular {
+    margin-top: 10px;
 }
- 
-.pricing-table .plan ul {
-    list-style: none;
-    margin: 0;
-    -moz-border-radius: 0 0 5px 5px;
-    -webkit-border-radius: 0 0 5px 5px;
-    border-radius: 0 0 5px 5px;
-}
- 
-.pricing-table .plan ul li.plan-feature {
-    padding: 15px 10px;
-    border-top: 1px solid #c5c8c0;
-    margin-right: 35px;
-}
- 
-.pricing-three-column {
-    margin: 0 auto;
-    width: 80%;
-}
- 
-.pricing-variable-height .plan {
-    float: none;
-    margin-left: 2%;
-    vertical-align: bottom;
-    display: inline-block;
-    zoom:1;
-    *display:inline;
-}
- 
-.plan-mouseover .plan-name {
-    background-color: #4e9a06 !important;
-}
- 
-.btn-plan-select {
-    padding: 8px 25px;
-    font-size: 18px;
-}
+
+    .db-pricing-eleven.popular .price {
+        padding-top: 80px;
+    }
