Cambios estéticos enn comprador de monedas

--- a/principal/templates/buy_coins.html
+++ b/principal/templates/buy_coins.html
@@ -13,11 +13,8 @@
                         <p>4.50&euro;</p>
                     </div>
                     <div class="type">
-                        SMALL PACK
+                        <p>40 coins pack</p>
                     </div>
-                    <ul>
-                        <li>40 Coins</li>
-                    </ul>
                     <div class="pricing-footer">
                         {{form1.render}}
                     </div>
@@ -31,11 +28,8 @@
                     <p>7&euro;</p>
                 </div>
                 <div class="type">
-                    MEDIUM PACK
+                    <p>60 coins pack</p>
                 </div>
-                <ul>
-                    <li>60 Coins</li>
-                </ul>
                 <div class="pricing-footer">
                     {{form2.render}}
                 </div>
@@ -49,11 +43,8 @@
                      <p>10&euro;</p>
                 </div>
                 <div class="type">
-                    ADVANCE PACK
+                    <p>100 coins pack</p>
                 </div>
-                <ul>
-                    <li>100 Coins</li>
-                </ul>
                 <div class="pricing-footer">
                     {{form3.render}}
                 </div>
