--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 	<meta charset="ISO-8859-1">
-{#    {% block title %} {% endblock %}#}
-    <!--<title>{% block title %} {% endblock %} | BrainTravel</title>-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %} {% endblock %} | BrainTravel</title>
     
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     {% load staticfiles %}
-    <!--{% load i18n %} -->
+    {% load i18n %}
     <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
     <link rel="stylesheet" href="{% static "css/custom.css" %}">
     <link rel="stylesheet" href="{% static "css/animate.css" %}">
