--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -1,74 +1,38 @@
 {% extends 'base.html' %}
 {% block title %} Sign in {% endblock %}
 {% block content %}
-<div class="container">
-    <div class="omb_login">
-    	<h3 class="omb_authTitle">Login or <a href="#" data-toggle="modal" data-target="#registerModal">Sign up</a></h3>
-{#		<div class="row omb_row-sm-offset-3 omb_socialButtons">#}
-{#    	    <div class="col-xs-4 col-sm-2">#}
-{#		        <a href="#" class="btn btn-lg btn-block omb_btn-facebook">#}
-{#			        <i class="fa fa-facebook visible-xs"></i>#}
-{#			        <span class="hidden-xs">Facebook</span>#}
-{#		        </a>#}
-{#	        </div>#}
-{#        	<div class="col-xs-4 col-sm-2">#}
-{#		        <a href="#" class="btn btn-lg btn-block omb_btn-twitter">#}
-{#			        <i class="fa fa-twitter visible-xs"></i>#}
-{#			        <span class="hidden-xs">Twitter</span>#}
-{#		        </a>#}
-{#	        </div>#}
-{#        	<div class="col-xs-4 col-sm-2">#}
-{#		        <a href="#" class="btn btn-lg btn-block omb_btn-google">#}
-{#			        <i class="fa fa-google-plus visible-xs"></i>#}
-{#			        <span class="hidden-xs">Google+</span>#}
-{#		        </a>#}
-{#	        </div>#}
-{#		</div>#}
-{#		<div class="row omb_row-sm-offset-3 omb_loginOr">#}
-{#			<div class="col-xs-12 col-sm-6">#}
-{#				<hr class="omb_hrOr">#}
-{#				<span class="omb_spanOr">or</span>#}
-{#			</div>#}
-{#		</div>#}
-		<div class="row omb_row-sm-offset-3">
-			<div class="col-xs-12 col-sm-6">
-			    <form id="siginForm" class="omb_loginForm" action="/signin/" autocomplete="off" method="POST" role="form" data-toggle="validator">
-                    {% csrf_token %}
-                    <div class="form-group">
-                        <div class="input-group">
-                            <div class="input-group-addon">
-                                <span class="fa fa-envelope"></span>
-                            </div>
-                            <input type="email" class="form-control" data-error="Invalid email address" placeholder="email address" name="username" required />
-                        </div>
-                        <span class="help-block with-errors"></span>
+<div class="row animated fadeInUp">
+{% if msg_errors %}
+	<div class="alert alert-danger" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        {% for msg_error in msg_errors %}
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span>
+            {{ msg_error }}
+        {% endfor %}
+{% endif %}
+    </div>
+    {%if message%}
+		<p>{{message}}</p>
+	{%endif%}
+    <div class="col-lg-12">
+        <div class="login-container">
+            <div class="form-box-login">
+                <form id="siginForm" action="/signin/" method="post" role="form" data-toggle="validator">
+                	{% csrf_token %}
+                	<div class="form-group">
+	                    <input type="email" class="form-control" data-error="Email not valid!" placeholder="username" name="username" required />
+	                    <div class="help-block with-errors"></div>
                     </div>
-
-                    <div class="form-group">
-                        <div class="input-group">
-                            <div class="input-group-addon">
-                                <span class="glyphicon glyphicon-lock"></span>
-                            </div>
-                            <input  type="password" class="form-control" name="password" placeholder="Password" required>
-                        </div>
-                        <span class="help-block with-errors"></span>
-                    </div>
-
-					<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-				</form>
-			</div>
-    	</div>
-{#		<div class="row omb_row-sm-offset-3" style="margin-top: 10px">#}
-{#			<div class="col-xs-6 col-sm-3">#}
-{#                    <input type="checkbox" value="remember-me" id="id_remember" name="remember">#}
-{#                    <label for="id_remember" class="control-label">Remember Me</label>#}
-{#			</div>#}
-{#			<div class="col-xs-6 col-sm-3 text-right">#}
-{#                <a href="#">Forgot password?</a>#}
-{#			</div>#}
-{#		</div>#}
-	</div>
-
+                    <input type="password" placeholder="password" name="password">
+                    <button class="btn btn-info btn-block login" type="submit">Login</button>
+                    <hr/>
+                    <span>Don't have an account? <a href="#" data-toggle="modal" data-target="#registerModal">Create one now</a></span>
+                </form>
+            </div>
+        </div>
+    </div>
+    
     <div class="modal fade registrationForm" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
