--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -57,14 +57,16 @@
                         {% for venue in day.venues.all %} {% if not venue.is_food%}
                         <div class="col-sm-4 col-xs-6 col-md-4 col-lg-3 clearfix">
                             <img src="{{venue.photo}}"
-                                class="img-responsive img-circle img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'" data-toggle="modal" data-target="#tipInfo" onclick=show_modal_tips({{venue.id}})>
+                                class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'" data-toggle="modal" data-target="#tipInfo" onclick=show_modal_tips({{venue.id}})>
                             <h4>{{venue.name}}</h4>
                         </div>
                         {% if forloop.counter|divisibleby:2 %}
-                        <div class="clearfix visible-xs-block"></div>
-                        {% elif forloop.counter|divisibleby:3 %}
-                        <div class="clearfix visible-sm-block"></div>
-                        {% endif %} {% endif %} {% endfor %}
+						<div class="clearfix visible-xs-block"></div>
+						{% endif %}
+						
+						{% if forloop.counter|divisibleby:4 %}
+						<div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
+						{% endif %} {% endif %} {% endfor %}
                     </div>
 
                     <h3>
@@ -79,12 +81,12 @@
                             <h4>{{venue.name}}</h4>
                         </div>
                         {% if forloop.counter|divisibleby:2 %}
-                        <div class="clearfix visible-xs-block"></div>
-                        {% elif forloop.counter|divisibleby:3 %}
-                        <div class="clearfix visible-sm-block"></div>
-                        {% elif forloop.counter|divisibleby:4 %}
-                        <div class="clearfix visible-md-block"></div>
-                        {% endif %} {% endif %} {% endfor %}
+						<div class="clearfix visible-xs-block"></div>
+						{% endif %}
+						
+						{% if forloop.counter|divisibleby:4 %}
+						<div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
+						{% endif %} {% endif %} {% endfor %}
                     </div>
                 </div>
             </div>
