--- a/principal/templates/search.html
+++ b/principal/templates/search.html
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-md-2 col-sm-3 col-lg-2 col-xs-12 text-center">
                         <a href="#">
-                            <img class="img-rounded" src="/{{trip.traveller.photo}}">
+                            <img class="img-rounded img-responsive" src="/{{trip.traveller.photo}}">
                         </a>
                     </div>
                     <div class="col-md-10 col-sm-9 col-lg-10 col-xs-12">
