--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -1,37 +1,67 @@
 {% extends 'base.html' %}
 {% block title %} Sign in {% endblock %}
 {% block content %}
-<div class="container">
-    <div class="omb_login">
-    	<h3 class="omb_authTitle">Login or <a href="#" data-toggle="modal" data-target="#registerModal">Sign up</a></h3>
-		<div class="row omb_row-sm-offset-3">
-			<div class="col-xs-12 col-sm-6">
-			    <form id="siginForm" class="omb_loginForm" action="/signin/" autocomplete="off" method="POST" role="form" data-toggle="validator">
-	                {% csrf_token %}
-	                <div class="form-group">
-	                    <div class="input-group">
-	                        <div class="input-group-addon">
-	                            <span class="fa fa-envelope"></span>
-	                        </div>
-	                        <input type="email" class="form-control" data-error="Invalid email address" placeholder="email address" name="username" required />
-	                    </div>
-	                    <span class="help-block with-errors"></span>
-	                </div>
-	
-	                <div class="form-group">
-	                    <div class="input-group">
-	                        <div class="input-group-addon">
-	                            <span class="glyphicon glyphicon-lock"></span>
-	                        </div>
-	                        <input  type="password" class="form-control" name="password" placeholder="Password" required>
-	                    </div>
-	                    <span class="help-block with-errors"></span>
-	                </div>
-	
-					<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-				</form>
-			</div>
-		</div>
+<div class="container-fluid">
+{#    <div class="omb_login">#}
+{#		<div class="row omb_row-sm-offset-3">#}
+{#			<div class="col-xs-12 col-sm-6">#}
+{#			    <form id="siginForm" class="omb_loginForm" action="/signin/" autocomplete="off" method="POST" role="form" data-toggle="validator">#}
+{#                    <span class="omb_authTitle">Login or <a href="#" data-toggle="modal" data-target="#registerModal">Sign up</a></span>#}
+{#	                {% csrf_token %}#}
+{#	                <div class="form-group">#}
+{#	                    <div class="input-group">#}
+{#	                        <div class="input-group-addon">#}
+{#	                            <span class="fa fa-envelope"></span>#}
+{#	                        </div>#}
+{#	                        <input type="email" class="form-control" data-error="Invalid email address" placeholder="email address" name="username" required />#}
+{#	                    </div>#}
+{#	                    <span class="help-block with-errors"></span>#}
+{#	                </div>#}
+{#	#}
+{#	                <div class="form-group">#}
+{#	                    <div class="input-group">#}
+{#	                        <div class="input-group-addon">#}
+{#	                            <span class="glyphicon glyphicon-lock"></span>#}
+{#	                        </div>#}
+{#	                        <input  type="password" class="form-control" name="password" placeholder="Password" required>#}
+{#	                    </div>#}
+{#	                    <span class="help-block with-errors"></span>#}
+{#	                </div>#}
+{#	#}
+{#					<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>#}
+{#				</form>#}
+{#			</div>#}
+{#		</div>#}
+{#	</div>#}
+
+    <div class="omb_login col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+        <form id="siginForm" class="omb_loginForm" action="/signin/" autocomplete="off" method="POST" role="form" data-toggle="validator">
+            <div class="omb_authTitle">
+                Login or <a href="#" data-toggle="modal" data-target="#registerModal">Sign up</a>
+            </div>
+            {% csrf_token %}
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <span class="fa fa-envelope"></span>
+                    </div>
+                    <input type="email" class="form-control" data-error="Invalid email address" placeholder="email address" name="username" required />
+                </div>
+                <span class="help-block with-errors"></span>
+            </div>
+
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-lock"></span>
+                    </div>
+                    <input  type="password" class="form-control" name="password" placeholder="Password" required>
+                </div>
+                <span class="help-block with-errors"></span>
+            </div>
+
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        </form>
 	</div>
     
     <div class="modal fade registrationForm" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
